@@ -16,6 +16,7 @@ and this project adheres to http://semver.org/[Semantic Versioning].
 * Fixed software flow control for POSIX systems ([!54](https://gitlab.com/susurrus/serialport-rs/merge_requests/54))
 
 ==== Removed
+* Removed support for the `x86_64-unknown-linux-gnux32`.
 
 === [3.1.0] - 2018-11-02
 ==== Added
